<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            card_view:cardElevation="10dp"
            card_view:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/mpesaa" />

                <TextView
                    android:id="@+id/mpesa_title"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/thumbnail"
                    android:text="@string/mpesa_title"
                    android:clickable="false"
                    android:textColor="#000000"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tv_nbi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mpesa_title"
                    android:maxLines="18"
                    android:padding="8dp"
                    android:text="@string/mpesa_text"
                    android:textColor="#666"
                    android:textSize="16dp" />



            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            card_view:cardElevation="10dp"
            card_view:cardCornerRadius="10dp"
            android:padding="@dimen/activity_horizontal_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/thumbnailBank"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/placeholder1" />

                <TextView
                    android:id="@+id/tnb_title"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/thumbnailBank"
                    android:text="@string/tnb_title"
                    android:clickable="false"
                    android:textColor="#000000"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tv_tnb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tnb_title"
                    android:maxLines="18"
                    android:padding="8dp"
                    android:text="@string/tnb_text"
                    android:textColor="#666"
                    android:textSize="16dp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            card_view:cardElevation="10dp"
            card_view:cardCornerRadius="10dp"
            android:padding="@dimen/activity_horizontal_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/cba_title"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cba_title"
                    android:clickable="false"
                    android:textColor="#000000"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tv_cba"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cba_title"
                    android:maxLines="18"
                    android:padding="8dp"
                    android:text="@string/cba_text"
                    android:textColor="#666"
                    android:textSize="16dp" />


           </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            card_view:cardElevation="10dp"
            card_view:cardCornerRadius="10dp"
            android:padding="@dimen/activity_horizontal_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/kcb_title"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kcb_title"
                    android:clickable="false"
                    android:textColor="#000000"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tv_kcb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/kcb_title"
                    android:maxLines="18"
                    android:padding="8dp"
                    android:text="@string/kcb_text"
                    android:textColor="#666"
                    android:textSize="16dp" />


            </RelativeLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>
</ScrollView>