<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            card_view:cardElevation="10dp"
            card_view:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/map1" />

                <Button
                    android:id="@+id/btn_find_us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/thumbnail"
                    android:layout_alignRight="@+id/thumbnail"
                    android:drawableLeft="@drawable/ic_action_map"
                    android:text="View Maps"/>

                <TextView
                    android:id="@+id/nbi_title"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/thumbnail"
                    android:text="@string/contact_nbi_office"
                    android:clickable="false"
                    android:textColor="#000000"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tv_nbi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/nbi_title"
                    android:maxLines="8"
                    android:padding="8dp"
                    android:text="@string/contact_nbi_info"
                    android:textColor="#666"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/msa_title"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_nbi"
                    android:text="@string/contact_msa_office"
                    android:clickable="false"
                    android:textColor="#000000"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tv_msa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/msa_title"
                    android:maxLines="8"
                    android:padding="8dp"
                    android:text="@string/contact_msa_info"
                    android:textColor="#666"
                    android:textSize="16dp" />



            </RelativeLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>
</ScrollView>